--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.4",
+    "bitvavo": "^1.2.0",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
     "ts-node": "^10.2.1",
